--- a/src/pages/Chat/chat.scss
+++ b/src/pages/Chat/chat.scss
@@ -2,7 +2,7 @@
 	margin: 10px 0;
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	height: calc(100vh - 20px);
 
 
 
@@ -26,38 +26,24 @@
 			flex-direction: column;
 			gap: 15px;
 			padding-bottom: 10px;
-		}
 
-		.input {
-			display: flex;
-			align-items: center;
-			gap: 10px;
-
-			input {
-				background: #212121;
-				border-radius: 10px;
-				border: none;
-				width: 100%;
-				outline: none;
-				padding: 10px;
-				color: #fff;
-			}
-
-			button {
-				padding: 8px;
-				border-radius: 10px;
-				background: #1A66FF;
-				color: #fff;
-				font-weight: 700;
-				font-size: 18px;
-				border: 1px solid #1A66FF;
-
-				&:hover {
-					background: transparent;
-					transition: 0.4s all;
-				}
+			.message_img {
+				width: 300px;
 			}
 		}
+
+
 
 	}
+}
+
+.skeleton {
+	padding-top: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+	font-size: 20px;
+	font-weight: 700;
 }
